# llm-mmu

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: accuracy_bench.py  accuracy_last_run.json  e2e_bench.py  last_run.json
src/mmu/: cli.py  config.py  sessions.py  tokens.py
src/mmu/paging/: engine.py
src/mmu/proxy/: adapters.py  app.py  sse.py
src/mmu/store/: db.py  schema.sql
tests/: test_accuracy_bench.py  test_paging_e2e.py  test_proxy_e2e.py  test_sessions.py  test_sse.py
