[project]
name = "llm-mmu"
version = "0.1.0"
description = "Model Memory Unit — transparent demand paging for LLM context windows"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Mehran Meidani" }]
keywords = ["llm", "context", "proxy", "paging", "agents", "claude", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "starlette>=0.40",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
mmu = "mmu.cli:main"

[project.urls]
Homepage = "https://github.com/Kaseban/llm-mmu"
Repository = "https://github.com/Kaseban/llm-mmu"
Issues = "https://github.com/Kaseban/llm-mmu/issues"
Changelog = "https://github.com/Kaseban/llm-mmu/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
